--- a/app/views/datatools/rpg_set.html
+++ b/app/views/datatools/rpg_set.html
@@ -689,7 +689,7 @@
                         <td class="text-right">
                             <div class="td-input-wrapper num-input">
                                 <input type="number" value=""  data-date="" placeholder="" ng-model="ratio.value"/>
-                                <span class="number-format">{{ratio.value|number:2}}</span>
+                                <span class="number-format text-right">{{ratio.value|number:2}}</span>
                             </div>
                         </td>
                     </tr>
@@ -713,7 +713,7 @@
                         <td class="text-right">
                             <div class="td-input-wrapper num-input">
                                 <input type="number" value=""  data-date="" placeholder="" ng-model="ratio.value"/>
-                                <span class="number-format">{{ratio.value|number:2}}</span>
+                                <span class="number-format text-right">{{ratio.value|number:2}}</span>
                             </div>
                         </td>
                     </tr>
